0024142: Wrong section curve Modified intersection of two conical surfaces with almost the same axis of revolution Test cases for issue CR24142